--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 .phony: all clean
 
-all: re-keyboard re-record
+all: re-keyboard re-record re-draw re-read
 
 re-keyboard: main.o
 	gcc -Wall -Werror -o $@ main.o `pkg-config --libs gtk+-3.0` -lm
@@ -9,6 +9,7 @@ re-keyboard: main.o
 main.o: main.c
 	gcc -Wall -Werror `pkg-config --cflags gtk+-3.0` -o main.o -c main.c
 
+
 re-record: re-record.o
 	gcc -Wall -Werror -o $@ $< `pkg-config --libs gtk+-3.0` -lm
 	@echo "*** Success ***"
@@ -16,5 +17,21 @@ re-record: re-record.o
 re-record.o: re-record.c
 	gcc -Wall -Werror `pkg-config --cflags gtk+-3.0` -o $@ -c $<
 
+
+re-draw: re-draw.o
+	gcc -Wall -Werror -o $@ $< `pkg-config --libs gtk+-3.0` -lm
+	@echo "*** Success ***"
+
+re-draw.o: re-draw.c
+	gcc -Wall -Werror `pkg-config --cflags gtk+-3.0` -o $@ -c $<
+
+
+re-read: re-read.o
+	gcc -Wall -Werror -o $@ $< `pkg-config --libs gtk+-3.0` -lm
+	@echo "*** Success ***"
+
+re-read.o: re-read.c
+	gcc -Wall -Werror `pkg-config --cflags gtk+-3.0` -o $@ -c $<
+
 clean:
-	-rm re-keyboard re-record *.o
+	-rm re-keyboard re-record re-draw re-read *.o
