--- a/src/Makefile
+++ b/src/Makefile
@@ -18,12 +18,15 @@ re-record.o: re-record.c
 	gcc -Wall -Werror `pkg-config --cflags gtk+-3.0` -o $@ -c $<
 
 
-re-draw: re-draw.o
-	gcc -Wall -Werror -o $@ $< `pkg-config --libs gtk+-3.0` -lm
+re-draw: re-draw.o hershey-fonts.o
+	gcc -Wall -Werror -o $@ $^ `pkg-config --libs gtk+-3.0` -lm
 	@echo "*** Success ***"
 
 re-draw.o: re-draw.c
 	gcc -Wall -Werror `pkg-config --cflags gtk+-3.0` -o $@ -c $<
+
+hershey-fonts.o: hershey-fonts.c
+	gcc `pkg-config --cflags gtk+-3.0` -o $@ -c $<
 
 
 re-read: re-read.o
@@ -32,6 +35,8 @@ re-read: re-read.o
 
 re-read.o: re-read.c
 	gcc -Wall -Werror `pkg-config --cflags gtk+-3.0` -o $@ -c $<
+
+
 
 clean:
 	-rm re-keyboard re-record re-draw re-read *.o
