--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,10 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# Python virtual environment
+venv
+
+# Toltecmk
+packages/*/build/
+packages/*/dist/
